grammar.js
    source_file: ($) =>
      seq(optional($._nl), prec.left(listSep($._element, $._nl))),

    element_list: ($) => listSep($._element, $._nl),

    _element: ($) =>
      choice(
        $._definition,
        $._statement,
        $._standalone_label,
        $._standalone_comment,
        $._block
      ),

    _start_line: ($) => choice($._label, $._ws),

    //----------------------------------------------------------------------
    // Labels:
    //----------------------------------------------------------------------

    _name: ($) => field("name", $._identifier),

    external_label: ($) => seq(optional($._ws), $._name, "::", optional($._ws)),

    //----------------------------------------------------------------------
    // Comments:
    //----------------------------------------------------------------------

    comment: ($) => choice($._comment_star, $._comment_semi, $._comment_pipe, $._positional_comment),

    _comment_semi: () => token(prec(1, /;[^\n\r]*/)),
    _comment_pipe: () => token(prec(1, /\|[^\n\r]*/)),
    _comment_star: () => token(prec(1, /\*[^\n\r]*/)),
    _positional_comment: () => token(prec(-1, /[^\n\r]+/)),

    _end_line: ($) =>
      choice(
        alias($._comment_semi, $.comment),
        alias($._comment_pipe, $.comment),
        seq(optional($._ws), alias($._comment_star, $.comment)),
        seq($._ws, alias($._positional_comment, $.comment))
      ),

    //----------------------------------------------------------------------
    // Mnemonics:
    //----------------------------------------------------------------------

    // instructions:

    _instruction_mnemonic_op: ($) =>
      alias(mnemonicChoice(instructions), $.instruction_mnemonic),
    _instruction_mnemonic_noop: ($) =>
      alias(mnemonicChoice(instructionsNoOperands), $.instruction_mnemonic),

    // directives:

    _data_constant_mnemonic: ($) =>
      alias(mnemonicChoice(["dc", "dr"]), $.directive_mnemonic),
    _data_constant_short_mnemonic: ($) =>
      alias(mnemonicChoice(["db", "dw", "dl"]), $.directive_mnemonic),
    _data_space_mnemonic: ($) =>
      alias(mnemonicChoice(["dcb", "blk"]), $.directive_mnemonic),
    _data_space_short_mnemonic: ($) =>
      alias(caseInsensitive("ds"), $.directive_mnemonic),
    _directive_mnemonic_noop: ($) =>
      alias(mnemonicChoice(directiveNoOperands), $.directive_mnemonic),
    _directive_mnemonic_op: ($) =>
      alias(mnemonicChoice(directives), $.directive_mnemonic),
    _section_mnemonic: ($) =>
      alias(caseInsensitive("section"), $.directive_mnemonic),
    _conditional_mnemonic_inline: ($) =>
      alias(caseInsensitive("iif"), $.control_mnemonic),
    _rem_mnemonic: ($) => alias(caseInsensitive("rem"), $.control_mnemonic),
    _rept_mnemonic: ($) => alias(caseInsensitive("rept"), $.control_mnemonic),
    _endr_mnemonic: ($) => alias(caseInsensitive("endr"), $.control_mnemonic),
    _end_mnemonic: ($) => alias(caseInsensitive("end"), $.control_mnemonic),

    section_type: () => choice(...sectionTypes.map(caseInsensitive)),
    memory_type: () => choice(...memoryTypes.map(caseInsensitive)),

    instruction: ($) =>
      prec.right(
        choice(
          // Instruction with operands
          seq(
            field("mnemonic", $._instruction_mnemonic_op),
            optional(seq(".", field("size", $._size))),
            seq($._ws, field("operands", $.operand_list))
          ),
          // Instruction with no operands
          seq(
            field("mnemonic", $._instruction_mnemonic_noop),
            optional(seq(".", field("size", $._size)))
          )
        )
      ),

    operand_list: ($) => listSep($._operand, $._sep),
    _operand: ($) =>
      choice($._effective_address, $.register_list, $._expression),

    _size: ($) => choice($.size, $.macro_arg),
    size: () => /[bwlsdxqBWLSDXQ]/,

    //----------------------------------------------------------------------
    // Directives:
    //----------------------------------------------------------------------

    directive: ($) =>
      prec.right(
        choice(
          seq(
            field("mnemonic", $._directive_mnemonic_noop),
            optional(seq(".", field("size", $._size)))
          ),
          seq(
            field("mnemonic", $._directive_mnemonic_op),
            optional(seq(".", field("size", $._size))),
            $._ws,
            field("operands", $.operand_list)
          )
        )
      ),

    // section

    section: ($) =>
      choice(
        seq(field("type", $.section_type)),
        seq(
          $._section_mnemonic,
          $._ws,
          field("name", choice($._identifier, $.string_literal)),
          optional(
            seq(
              $._sep,
              field("type", $.section_type),
              optional(
                seq(
                  $._sep,
                  field(
                    "memory_type",
                    choice($.memory_type, $._numeric_literal)
                  )
                )
              ),
              optional($._sep)
            )
          )
        )
      ),

    // includes

    data_constant: ($) =>
      seq(
        choice(
          seq(
            field("mnemonic", $._data_constant_mnemonic),
            optional(seq(".", field("size", $._size)))
          ),
          field("mnemonic", $._data_constant_short_mnemonic)
        ),
        $._ws,
        field("values", $.expression_list)
      ),

    data_space: ($) =>
      choice(
        seq(
          field("mnemonic", $._data_space_short_mnemonic),
          optional(seq(".", field("size", $._size))),
          $._ws,
          field("length", $._expression)
        ),
        seq(
          field("mnemonic", $._data_space_mnemonic),
          optional(seq(".", field("size", $._size))),
          $._ws,
          field("length", $._expression),
          optional(seq($._sep, field("fill", $._expression))),
          optional($._sep)
        )
      ),

    // Macro call:

    macro_call: ($) =>
      prec.right(
        seq(
          field("name", $._identifier_nodot),
          optional(seq(".", field("qualifier", $._expression))),
          optional(seq($._ws, field("arguments", $.argument_list))),
          optional($._ws)
        )
      ),

    //----------------------------------------------------------------------
    // Block / multiline:
    //----------------------------------------------------------------------

    repeat: ($) =>
      seq(
        $._start_line,
        $._rept_mnemonic,
        $._ws,
        field("count", $._expression),
        optional($._end_line),
        $._nl,
        optional(seq(field("body", $.element_list), $._nl)),
        $._start_line,
        $._endr_mnemonic,
        optional($._end_line)
      ),

    conditional: ($) =>
      seq(
        $._start_line,
        $._conditional_block_start,
        optional(
          seq(
            field("consequent", $.element_list),
            $._nl,
            optional(
              seq(
                $._conditional_block_else,
                field("alternate", $.element_list),
                $._nl
              )
            )
          )
        ),
        $._conditional_block_end,
        optional($._end_line)
      ),

    _conditional_block_else: ($) =>
      prec.dynamic(
        1,
        seq($._start_line, $._else_mnemonic, optional($._end_line), $._nl)
      ),

    _conditional_block_start: ($) =>
      seq(
        choice(
          $._conditional_expression,
          $._conditional_noop,
          $._conditional_comparison,
          $._conditional_symbol
        ),
        optional($._end_line),
        $._nl
      ),

    _conditional_block_end: ($) => seq($._start_line, $._endif_mnemonic),

    conditional_instruction: ($) =>
      seq(
        $._conditional_mnemonic_inline,
        $._ws,
        field("test", $._expression),
        $._ws,
        field("consequent", $.instruction)
      ),

    rem: ($) =>
      seq(
        $._start_line,
        $._rem_mnemonic,
        optional($._end_line),
        $._nl,
        alias(repeat(seq(repeat(/[^\n]/), $._nl)), $.comment),
        alias(/\s+erem/i, $.control_mnemonic),
        optional($._end_line)
      ),

    end: ($) =>
      prec.right(seq($._start_line, $._end_mnemonic, listSep(/.*/, $._nl))),

    data_register: () => /[dD][0-7]/,
    _expression: ($) =>
      choice(
        $._numeric_literal,
        $.string_literal,
        $.unary_expression,
        $.binary_expression,
        $.parenthesized_expression,
        $._identifier
      ),

    expression_list: ($) => listSep($._expression, $._sep),

    binary_expression: ($) =>
      choice(
        ...binaryOperators.map((operator, i) =>
          prec.left(
            i,
            seq(
              field("left", $._expression),
              field("operator", alias(token(seq(optional(/[ \t]+/), operator, optional(/[ \t]+/))), $.operator)),
              field("right", $._expression)
            )
          )
        )
      ),

    // Literals

    _numeric_literal: ($) =>
      choice(
        $.hexadecimal_literal,
        $.binary_literal,
        $.octal_literal,
        $.decimal_literal
      ),

    decimal_literal: () =>
      prec.left(choice(/\d+/, seq(optional(/\d+/), ".", /\d+/))),

    string_literal: ($) =>
      choice(
        // Single quoted
        seq(
          "'",
          repeat(
            choice(
              prec(1, /[^'\n\\]+/), // Normal chars
              "''", // Repeat quote escape
              $._string_escape_codes
            )
          ),
          "'"
        ),
        // Double quoted
        seq(
          '"',
          repeat(choice(prec(1, /[^"\n\\]+/), '""', $._string_escape_codes)),
          '"'
        )
      ),

    _string_escape_codes: ($) =>
      choice(
        /\\[\\bfnrt"'e]/, // Single char escape codes
        /\\[0-7]+/, // Octal character code
        /\\[xX][0-9a-f]+/, // Hex charcter code
        $.macro_arg
      ),

    //----------------------------------------------------------------------
    // Identifiers
    //----------------------------------------------------------------------

    _identifier: ($) =>
      choice($.symbol, $.interpolated, $.macro_arg, $._builtin),

    _identifier_nodot: ($) =>
      choice(alias($.symbol_no_dot, $.symbol), $.interpolated, $.macro_arg, $._builtin),

    symbol: ($) =>
      prec.right(
        seq(repeat1(seq(optional("."), $._symbol_chars)), optional("$"))
      ),
    _symbol_chars: () => /([a-zA-Z0-9_%]|(\\?\\\.))+/,

    //----------------------------------------------------------------------
    // Misc:
    //----------------------------------------------------------------------

    _sep: () => /\s*,\s*/,
    _ws: () => /[ \t]+/,
    _nl: () => /([ \t]*(\r\n|\n|\r))+/,
  },
});

function listSep(rule, sep = ",") {
  return seq(repeat(seq(rule, sep)), rule, optional(sep));
}

function toCaseInsensitive(a) {
  var ca = a.charCodeAt(0);
  if (ca >= 97 && ca <= 122) return `[${a}${a.toUpperCase()}]`;
  if (ca >= 65 && ca <= 90) return `[${a.toLowerCase()}${a}]`;
  return a;
}

function caseInsensitive(keyword) {
  return new RegExp(keyword.split("").map(toCaseInsensitive).join(""));
}

function mnemonicChoice(options) {
  return caseInsensitive(options.join("|"));
}
