corpus/data.txt

============================================
Data constant
============================================
 dc.b 1,2,3
 dc.b "foo bar",2,3
 db 1,2,3
 dw 1,2,3
 dl 1,2,3
---
(source_file
  (data_constant
    mnemonic: (directive_mnemonic)
    size: (size)
    values: (expression_list
      (decimal_literal)
      (decimal_literal)
      (decimal_literal)))
  (data_constant
    mnemonic: (directive_mnemonic)
    size: (size)
    values: (expression_list
      (string_literal)
      (decimal_literal)
      (decimal_literal)))
  (data_constant
    mnemonic: (directive_mnemonic)
    values: (expression_list
      (decimal_literal)
      (decimal_literal)
      (decimal_literal)))
  (data_constant
    mnemonic: (directive_mnemonic)
    values: (expression_list
      (decimal_literal)
      (decimal_literal)
      (decimal_literal)))
  (data_constant
    mnemonic: (directive_mnemonic)
    values: (expression_list
      (decimal_literal)
      (decimal_literal)
      (decimal_literal)))
)

============================================
Data space
============================================
 dcb 1
 dcb.b 1
 dcb.b 1,2
 DCB.B 1,2
 blk.b 1,2
 ds 1
 ds.b 1
---
(source_file
  (data_space
    mnemonic: (directive_mnemonic)
    length: (decimal_literal))
  (data_space
    mnemonic: (directive_mnemonic)
    size: (size)
    length: (decimal_literal))
  (data_space
    mnemonic: (directive_mnemonic)
    size: (size)
    length: (decimal_literal)
    fill: (decimal_literal))
  (data_space
    mnemonic: (directive_mnemonic)
    size: (size)
    length: (decimal_literal)
    fill: (decimal_literal))
  (data_space
    mnemonic: (directive_mnemonic)
    size: (size)
    length: (decimal_literal)
    fill: (decimal_literal))
  (data_space
    mnemonic: (directive_mnemonic)
    length: (decimal_literal))
  (data_space
    mnemonic: (directive_mnemonic)
    size: (size)
    length: (decimal_literal))
)
